altering form-field from 1rem font-size to 16px - attempt to correct zoom on iOS

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 .form-elements{
   padding: .25rem .5rem;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5rem;
 }
 
